--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/colorbox.css">
-
+    <!--well -->
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&amp;display=swap" rel="stylesheet">
