--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-12">
-                    <div class="logo"> <a href="#"> <img src="assets/img/logo.png" alt=""> </a> </div>
+                    <div class="logo"> <a href="#"> <img src="{% static 'logo.png' %}" alt=""> </a> </div>
                 </div>
                 <div class="col-md-9 col-sm-12 header-right">
                     <div class="ad-banner float-right"> <a href="#"><img src="images/banner-ads/ad-top-header.png"
@@ -55,8 +55,7 @@
                         <div id="navbarSupportedContent"
                             class="collapse navbar-collapse navbar-responsive-collapse">
                             <ul class="nav navbar-nav">
-                                <li class="nav-item dropdown active"> <a href="#" class="nav-link"
-                                        data-toggle="dropdown">🏠 Ahabanza</a>
+                                <li class="nav-item dropdown active"> <a href='{% url "main:index" %}'>🏠 Ahabanza</a>
 
                                 </li>
                                 <li> <a href="category-style2.html">🤸‍♂️ Imikino</a> </li>
