--- a/templates/index.html
+++ b/templates/index.html
@@ -330,7 +330,7 @@
                         </div>
 
                         <div class="widget color-default">
-                            <h3 class="utf_block_title"><span>Popular News</span></h3>
+                            <h3 class="utf_block_title"><span>Sobanukirwa</span></h3>
 
                             {% for post in sobanukirwas %}
                               
@@ -354,8 +354,7 @@
                                 <li class="clearfix">
                                     <div class="utf_post_block_style post-float clearfix">
                                         <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
-                                                    src="{{ post.thumbnail.url }}" alt=""> </a> <a
-                                                class="utf_post_cat" href="#">{{ post.post.post_category }}</a> </div>
+                                                    src="{{ post.thumbnail.url }}" alt=""> </a></div>
                                         <div class="utf_post_content">
                                             <h2 class="utf_post_title title-small"> <a href="#">{{ post.title|title }}.</a> </h2>
                                             <div class="utf_post_meta"> <span class="utf_post_author"><i
@@ -373,7 +372,7 @@
                         </div>
 
                         <div class="widget color-default m-bottom-0">
-                            <h3 class="utf_block_title"><span>Trending News</span></h3>
+                            <h3 class="utf_block_title"><span>Amamariza Aha</span></h3>
                             <div id="utf_post_slide" class="owl-carousel owl-theme utf_post_slide">
                                 <div class="item">
                                     <div class="utf_post_overaly_style text-center clearfix">
@@ -381,12 +380,10 @@
                                                     src="images/news/tech/gadget1.jpg" alt=""> </a> </div>
                                         <div class="utf_post_content"> <a class="utf_post_cat"
                                                 href="#">Lifestyle</a>
-                                            <h2 class="utf_post_title"> <a href="#">The best MacBook Pro
-                                                    alternatives in 2020 for Appl 26</a> </h2>
+                                            <h2 class="utf_post_title"> <a href="#">Amamaza ibikorwa byawe nonaha</a> </h2>
                                             <div class="utf_post_meta"> <span class="utf_post_author"><i
-                                                        class="fa fa-user"></i> <a href="#">John Wick</a></span>
-                                                <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan,
-                                                    2020</span> </div>
+                                                        class="fa fa-user"></i> <a href="#">KANDA W'AMAMAZE NONAHA</a></span>
+                                                </div>
                                         </div>
                                     </div>
                                 </div>
