--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>:: Altroz - News Magazine HTML Template ::</title>
+    <title>Byosehano :: Amakuru - Menya byinshi igihe nyacyo ::</title>
 
     <!--Favicon-->
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
