--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -55,7 +55,7 @@
                         <div id="navbarSupportedContent"
                             class="collapse navbar-collapse navbar-responsive-collapse">
                             <ul class="nav navbar-nav">
-                                <li class="nav-item dropdown active"> <a href='{% url "main:index" %}'>🏠 Ahabanza</a>
+                                <li class="nav-item dropdown active"> <a href='{% url "web:index" %}'>🏠 Ahabanza</a>
 
                                 </li>
                                 <li> <a href="category-style2.html">🤸‍♂️ Imikino</a> </li>
