--- a/templates/article_category.html
+++ b/templates/article_category.html
@@ -3,133 +3,168 @@
 {% load humanize %}
 
 {% block content %}
-    <!--/ 1rd Block Wrapper Start -->
-    <section class="utf_block_wrapper">
-        <div class="container">
-          <div class="row">
+<!--/ 1rd Block Wrapper Start -->
+<section class="utf_block_wrapper">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-8 col-md-12">
-              <div class="block category-listing">
-                <h3 class="utf_block_title"><span>Lifestyle News</span></h3>
-                <ul class="subCategory unstyled">
-                  <li><a href="#">Travel</a></li>
-                  <li><a href="#">Health</a></li>
-                  <li><a href="#">Architecture</a></li>
-                  <li><a href="#">Food</a></li>
-                </ul>
-                <div class="row">
-                  
+                <div class="block category-listing">
+                    <h3 class="utf_block_title"><span>Lifestyle News</span></h3>
+                    <ul class="subCategory unstyled">
+                        <li><a href="#">Travel</a></li>
+                        <li><a href="#">Health</a></li>
+                        <li><a href="#">Architecture</a></li>
+                        <li><a href="#">Food</a></li>
+                    </ul>
+
+
                     {% for post in posts %}
-                        
+
+                    {% if forloop.first %}
+                    <div class="row">
+                        {% endif %}
                         <div class="col-md-6">
                             <div class="utf_post_block_style post-grid clearfix">
-                            <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid" src="images/news/lifestyle/health5.jpg" alt=""> </a> </div>
-                            <a class="utf_post_cat" href="#">{{ post.category.name }}</a>
-                            <div class="utf_post_content">
-                                <h2 class="utf_post_title title-large"> <a href="#">{{ post.title|title }}</a> </h2>
-                                <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i> <a href="#">{{ post.author.username }}</a></span> <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan, 2020</span> <span class="post-comment pull-right"><i class="fa fa-comments-o"></i> <a href="#" class="comments-link"><span>03</span></a></span> </div>					
-                                <p>{{ post.body|slice:":60" }}</p>
-                            </div>
+                                <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
+                                            src="{{ post.thumbnail.url }}" alt="{{ post.title|title }}"> </a> </div>
+                                <a class="utf_post_cat" href="#">{{ post.category.name }}</a>
+                                <div class="utf_post_content">
+                                    <h2 class="utf_post_title title-large"> <a href="{{ post.get_absolute_url }}">{{ post.title|title }}</a> </h2>
+                                    <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i>
+                                            <a href="#">{{ post.author.username }}</a></span> <span
+                                            class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan, 2020</span>
+                                        <span class="post-comment pull-right"><i class="fa fa-comments-o"></i> <a
+                                                href="#" class="comments-link"><span>03</span></a></span> </div>
+                                
+                                </div>
                             </div>
                         </div>
-                            
+
                     {% endfor %}
-                    
+                    </div>
                 </div>
-              </div>
-              
-              <div class="paging">
-                <ul class="pagination">
-                  <li class="active"><a href="#">1</a></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
-                  <li><a href="#">»</a></li>
-                </ul>
-              </div>          
-            </div>
-            
-            <div class="col-lg-4 col-md-12">
-              <div class="sidebar utf_sidebar_right">
-                <div class="widget">
-                  <h3 class="utf_block_title"><span>Follow Us</span></h3>
-                  <ul class="social-icon">
-                    <li><a href="#" target="_blank"><i class="fa fa-rss"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa fa-vimeo-square"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
-                  </ul>
-                </div>
-                
-                <div class="widget color-default">
-                  <h3 class="utf_block_title"><span>Popular News</span></h3>
-                  <div class="utf_list_post_block">
-                    <ul class="utf_list_post">
-                      <li class="clearfix">
-                        <div class="utf_post_block_style post-float clearfix">
-                          <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid" src="images/news/tech/gadget3.jpg" alt=""> </a> <a class="utf_post_cat" href="#">Lifestyle</a> </div>
-                          <div class="utf_post_content">
-                            <h2 class="utf_post_title title-small"> <a href="#">Zhang social media pop also known when smart innocent...</a> </h2>
-                            <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i> <a href="#">John Wick</a></span> <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan, 2020</span> </div>
-                          </div>
-                        </div>
-                      </li>
-                      
-                      <li class="clearfix">
-                        <div class="utf_post_block_style post-float clearfix">
-                          <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid" src="images/news/lifestyle/travel5.jpg" alt=""> </a> <a class="utf_post_cat" href="#">Travel</a> </div>
-                          <div class="utf_post_content">
-                            <h2 class="utf_post_title title-small"> <a href="#">Zhang social media pop also known when smart innocent...</a> </h2>
-                            <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i> <a href="#">John Wick</a></span> <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan, 2020</span> </div>
-                          </div>
-                        </div>
-                      </li>
-                      
-                      <li class="clearfix">
-                        <div class="utf_post_block_style post-float clearfix">
-                          <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid" src="images/news/tech/robot5.jpg" alt=""> </a> <a class="utf_post_cat" href="#">Traveling</a> </div>
-                          <div class="utf_post_content">
-                            <h2 class="utf_post_title title-small"> <a href="#">Zhang social media pop also known when smart innocent...</a> </h2>
-                            <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i> <a href="#">John Wick</a></span> <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan, 2020</span> </div>
-                          </div>
-                        </div>
-                      </li>
-                      
-                      <li class="clearfix">
-                        <div class="utf_post_block_style post-float clearfix">
-                          <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid" src="images/news/lifestyle/food1.jpg" alt=""> </a> <a class="utf_post_cat" href="#">Food</a> </div>
-                          <div class="utf_post_content">
-                            <h2 class="utf_post_title title-small"> <a href="#">Zhang social media pop also known when smart innocent...</a> </h2>
-                            <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i> <a href="#">John Wick</a></span> <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan, 2020</span> </div>
-                          </div>
-                        </div>
-                      </li>
+
+                <div class="paging">
+                    <ul class="pagination">
+                        <li class="active"><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">»</a></li>
                     </ul>
-                  </div>
                 </div>
-                <div class="widget text-center"> <img class="banner img-fluid" src="images/banner-ads/ad-sidebar.png" alt=""> </div>
-                <div class="widget m-bottom-0">
-                  <h3 class="utf_block_title"><span>Newsletter</span></h3>
-                  <div class="utf_newsletter_block">
-                    <div class="utf_newsletter_introtext">
-                      <h4>Subscribe Newsletter!</h4>
-                      <p>Lorem ipsum dolor sit consectetur adipiscing elit Maecenas in pulvinar neque Nulla finibus lobortis pulvinar.</p>
+            </div>
+
+            <div class="col-lg-4 col-md-12">
+                <div class="sidebar utf_sidebar_right">
+                    <div class="widget">
+                        <h3 class="utf_block_title"><span>Follow Us</span></h3>
+                        <ul class="social-icon">
+                            <li><a href="#" target="_blank"><i class="fa fa-rss"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fa fa-vimeo-square"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                        </ul>
                     </div>
-                    <div class="utf_newsletter_form">
-                      <form action="#" method="post">
-                        <div class="form-group">
-                          <input type="email" name="email" id="utf_newsletter_form-email" class="form-control form-control-lg" placeholder="E-Mail Address" autocomplete="off">
-                          <button class="btn btn-primary">Subscribe</button>
+
+                    <div class="widget color-default">
+                        <h3 class="utf_block_title"><span>Popular News</span></h3>
+                        <div class="utf_list_post_block">
+                            <ul class="utf_list_post">
+                                <li class="clearfix">
+                                    <div class="utf_post_block_style post-float clearfix">
+                                        <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
+                                                    src="images/news/tech/gadget3.jpg" alt=""> </a> <a
+                                                class="utf_post_cat" href="#">Lifestyle</a> </div>
+                                        <div class="utf_post_content">
+                                            <h2 class="utf_post_title title-small"> <a href="#">Zhang social media pop
+                                                    also known when smart innocent...</a> </h2>
+                                            <div class="utf_post_meta"> <span class="utf_post_author"><i
+                                                        class="fa fa-user"></i> <a href="#">John Wick</a></span> <span
+                                                    class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan,
+                                                    2020</span> </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="clearfix">
+                                    <div class="utf_post_block_style post-float clearfix">
+                                        <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
+                                                    src="images/news/lifestyle/travel5.jpg" alt=""> </a> <a
+                                                class="utf_post_cat" href="#">Travel</a> </div>
+                                        <div class="utf_post_content">
+                                            <h2 class="utf_post_title title-small"> <a href="#">Zhang social media pop
+                                                    also known when smart innocent...</a> </h2>
+                                            <div class="utf_post_meta"> <span class="utf_post_author"><i
+                                                        class="fa fa-user"></i> <a href="#">John Wick</a></span> <span
+                                                    class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan,
+                                                    2020</span> </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="clearfix">
+                                    <div class="utf_post_block_style post-float clearfix">
+                                        <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
+                                                    src="images/news/tech/robot5.jpg" alt=""> </a> <a
+                                                class="utf_post_cat" href="#">Traveling</a> </div>
+                                        <div class="utf_post_content">
+                                            <h2 class="utf_post_title title-small"> <a href="#">Zhang social media pop
+                                                    also known when smart innocent...</a> </h2>
+                                            <div class="utf_post_meta"> <span class="utf_post_author"><i
+                                                        class="fa fa-user"></i> <a href="#">John Wick</a></span> <span
+                                                    class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan,
+                                                    2020</span> </div>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="clearfix">
+                                    <div class="utf_post_block_style post-float clearfix">
+                                        <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
+                                                    src="images/news/lifestyle/food1.jpg" alt=""> </a> <a
+                                                class="utf_post_cat" href="#">Food</a> </div>
+                                        <div class="utf_post_content">
+                                            <h2 class="utf_post_title title-small"> <a href="#">Zhang social media pop
+                                                    also known when smart innocent...</a> </h2>
+                                            <div class="utf_post_meta"> <span class="utf_post_author"><i
+                                                        class="fa fa-user"></i> <a href="#">John Wick</a></span> <span
+                                                    class="utf_post_date"><i class="fa fa-clock-o"></i> 25 Jan,
+                                                    2020</span> </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
-                      </form>
                     </div>
-                  </div>
-                </div>            
-              </div>
-            </div>        
-          </div>
+                    <div class="widget text-center"> <img class="banner img-fluid"
+                            src="images/banner-ads/ad-sidebar.png" alt=""> </div>
+                    <div class="widget m-bottom-0">
+                        <h3 class="utf_block_title"><span>Newsletter</span></h3>
+                        <div class="utf_newsletter_block">
+                            <div class="utf_newsletter_introtext">
+                                <h4>Subscribe Newsletter!</h4>
+                                <p>Lorem ipsum dolor sit consectetur adipiscing elit Maecenas in pulvinar neque Nulla
+                                    finibus lobortis pulvinar.</p>
+                            </div>
+                            <div class="utf_newsletter_form">
+                                <form action="#" method="post">
+                                    <div class="form-group">
+                                        <input type="email" name="email" id="utf_newsletter_form-email"
+                                            class="form-control form-control-lg" placeholder="E-Mail Address"
+                                            autocomplete="off">
+                                        <button class="btn btn-primary">Subscribe</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </section>
-    <!--/ 1rd Block Wrapper End -->
+    </div>
+</section>
+<!--/ 1rd Block Wrapper End -->
 {% endblock content %}
